# risc_zero

./: .gitignore  Cargo.toml  README.md
architecture_utils/: '  Cargo.toml
architecture_utils/src/: bin_header.rs  instruction.rs  lib.rs  reg.rs
assembler/: .vimsess  Cargo.toml  README.md  a.out  sla.zasm
assembler/examples/: a.out  hello_world.zasm  keyboard.zasm  macros.zasm  matrix.zasm  rand.zasm  screen.zasm  simple.zasm  stdio.zasm  test.zasm  utils.zasm
assembler/src/: ast.rs  codegen.rs  error.rs  main.rs  parser.rs  utils.rs  zasm.pest
assembler/syntax/vim/: tape.vim  zasm.vim
disassembler/: Cargo.toml
disassembler/src/: main.rs
simulator/: Cargo.toml  err.out
simulator/src/: cpu_state.rs  emulation_frame.rs  instruction.rs  io_device.rs  main.rs  os.rs  reg.rs  reg_bank.rs  ui.rs  utils.rs
src/: main.rs
