[package]
name = "zasmc"
version = "0.1.0"
authors = ["Gabriel Dertoni <gab.dertoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
architecture_utils = { path = "../architecture_utils" }
pest = "2.1"
pest_derive = "2.1"
clap = "2.33"
